--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
   "version": 2,
   "name": "primebets-landing",  
   "regions": ["waw1"],
-  "buildCommand": "next build",
-  "devCommand": "next dev"
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "installCommand": "npm install"
 }
