--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
-  "name": "primebets-landing",  
-  "regions": ["waw1"],
+  "name": "primebets-landing",
+  "regions": ["fra1"],
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "installCommand": "npm install"
